fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   height: 100vh;
   background: radial-gradient(circle at center, #444444, #000000);
   font-family: Helvetica, Arial;
+  overflow: hidden;
 }
 
 .shooter .start
